# django-web-scraping

./: .gitignore  Dockerfile  README.md  crontab  docker-compose.yml  pyproject.toml  start-server.sh  urls.py
scraping/: admin.py  models.py
scraping/management/commands/: yahoo_scraping.py
scraping/migrations/: 0001_initial.py
settings/: base.py
