[tool.poetry]
name = "django-web-scraping"
version = "0.1.0"
description = ""
authors = ["k4ssyi <kasikasi00@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django-environ = "^0.4.5"
requests = "^2.22"
beautifulsoup4 = "^4.8"
django = "^2.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"
mypy = "^0.720.0"
pyformat = "^0.7.0"
bpython = "^0.18.0"
isort = "^4.3"
django-debug-toolbar = "^2.0"
django-extensions = "^2.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
